apps/mission-control/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mission-control-postgres
  namespace: mission-control
spec:
  selector:
    app: mission-control-postgres
  ports:
    - port: 5432
      targetPort: 5432
