apps/mission-control/backend-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mission-control-api-http-route
  namespace: mission-control
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mission-control-api.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "mission-control-api.hoytlabs.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mission-control-backend
          port: 8000
          weight: 1
