apps/mission-control/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mission-control-http-route
  namespace: mission-control
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mission-control.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "mission-control.hoytlabs.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mission-control-frontend
          port: 3000
          weight: 1
